# cluster-pack

./: .travis.yml  AGENTS.md  LICENSE  MANIFEST.in  OWNERS  README.md  benchmark_pex.py  benchmark_zip_methods.py  pom.xml  pylama.ini  pytest.ini  quick_bench.py  requirements.txt  setup.cfg  setup.py  tests-requirements.txt  tox.ini  versioneer.py
.github/workflows/: docker.yml  main.yml
cluster_pack/: __init__.py  _version.py  conda.py  dependencies.py  filesystem.py  packaging.py  process.py  settings.py  uploader.py  utils.py
cluster_pack/skein/: __init__.py  _execute_fun.py  skein_config_builder.py  skein_helper.py  skein_launcher.py  yarn_launcher.py
cluster_pack/spark/: spark_config_builder.py
examples/interactive-mode/: README.md
examples/skein-project/: README.md  setup.py  skein_example.sh
examples/skein-project/skein_project/: client.py  worker.py
examples/spark/: spark_example.py
examples/spark-with-S3/: Dockerfile  README.md  docker-compose.yml
examples/spark-with-S3/scripts/: install-hadoop.sh  install-spark.sh  install_pyspark.sh  run_spark_example.sh  spark_example.py
scripts/: hadoop_hdfs_test.ps1
tests/: test_conda.py  test_dependencies.py  test_filesystem.py  test_packaging.py  test_settings.py  test_uploader.py
tests/integration/: hadoop_hdfs_tests.sh  install_python.sh  test_skein_launcher.py  test_yarn_launcher.py
tests/resources/: conda.yaml  requirements.txt
tests/spark/: test_spark_config_builder.py
tests/user-lib/: setup.py
tests/user-lib-src-layout/: setup.py
(+2 files in other folders)
