[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = cluster_pack/_version.py
versionfile_build = cluster_pack/_version.py
tag_prefix =
parentdir_prefix = cluster-pack-

[mypy]
files = cluster_pack/**/*.py, tests/*.py

[mypy-cluster_pack._version]
ignore_errors = True

[mypy-user_lib.*]
ignore_errors = True
